Refactor the solution